# esp-csi-cli-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs
.cargo/: config.toml
.github/workflows/: check-compilation.yml  release.yml
docs/: RELEASE_MANIFEST.md
scripts/: extract-release-notes.sh  generate-release-manifest.sh
specs/: SPECS.md  WEBSERVER.md
src/: config.rs  main.rs
src/cli/: cli.rs  cmds.rs  mod.rs  serial.rs
