[package]
name = "esp-csi-cli-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["no-std", "println", "auto", "async-print"]
## Build without the standard library.
no-std = []
## Enable logging via `println!()`.
println = ["esp-csi-rs/println"]
## Automatically select the best available backend for the target.
auto = ["esp-csi-rs/auto"]
## Non-blocking async logging. This is an unstable feature and may cause unexpected behavior. Use with caution.
async-print = ["esp-csi-rs/async-print"]
## Enable logging via defmt.
defmt = [
    "esp-csi-rs/defmt",
]
## Force the JTAG backend for logging.
jtag-serial = ["esp-csi-rs/jtag-serial"]
## Force the UART backend for logging (not recommended, much slower than JTAG backend).
uart = ["esp-csi-rs/uart"]

## Support for the ESP32
esp32 = [
    "esp-csi-rs/esp32"
]

## Support for the ESP32-C2
esp32c2 = [
    "esp-csi-rs/esp32c2"
]

## Support for the ESP32-C3
esp32c3 = [
    "esp-csi-rs/esp32c3"
]

## Support for the ESP32-C6 (WiFi 6)
esp32c6 = [
    "esp-csi-rs/esp32c6"
]

## Support for the ESP32-S3 (AIoT)
esp32s3 = [
    "esp-csi-rs/esp32s3"
]

[dependencies]
esp-bootloader-esp-idf = "0.4.0"
esp-backtrace = { version = "0.18.1", features = [
    "panic-handler",
    "println",
] }
esp-hal = { version = "~1.0", default-features = false, features = [
    "unstable",
] }
esp-rtos = { version = "0.2.0", optional = false, features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
] }
esp-println = { version = "0.16.1", default-features = false }
esp-alloc = { version = "0.9.0" }
embedded-io-async = "0.6.1"
esp-radio = { version = "0.17.0", default-features = false, optional = false, features = [
    "wifi",
    "sniffer",
    "esp-alloc",
    "smoltcp",
    "unstable",
    "esp-now",
    "csi",
] }
heapless = { version = "0.7", default-features = false }
embassy-executor = { version = "0.9.1" }
embassy-time = { version = "0.5.0" }
static_cell = { version = "2.1.1" }
embassy-sync = { version = "0.7.0" }
embassy-futures = { version = "0.1.1" }
esp-csi-rs = { version = "0.4.0", default-features = false }
menu = "0.6.1"
embedded-io = "0.6.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
incremental = true
debug = 2
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false
panic = "abort"
