[package]
name = "esp-csi-cli-rs"
version = "0.7.0"
edition = "2024"

[features]
default = ["no-std", "println", "auto", "statistics"]
## Build without the standard library.
no-std = []
## Enable logging via `println!()`.
println = ["esp-csi-rs/println", "esp-backtrace/println"]
## Automatically select the best available backend for the target.
auto = ["esp-csi-rs/auto"]
## Non-blocking async logging: packet serialization/output is delegated to an
## async driver so heavy I/O never blocks the executor. Keeping logging
## non-blocking is critical for collection throughput — it prevents dropped CSI
## packets under load. Enabled automatically by `jtag-serial` (see below). When
## set on its own it is unstable; combine it with `jtag-serial`, not `uart`.
async-print = ["esp-csi-rs/async-print"]
## Expose runtime PPS / rate / drop + ESP-NOW TX counters via the `show-stats` command.
statistics = ["esp-csi-rs/statistics"]
## Enable logging via defmt (lowest device-to-host transfer overhead).
## NOTE: incompatible with `async-print` — both register a defmt `#[global_logger]`,
## so the two together fail to link (`_defmt_acquire` multiply defined). Since
## `jtag-serial` forces `async-print`, `defmt` cannot be combined with
## `jtag-serial`; use `defmt` with `auto` (the `*-defmt` cargo aliases) instead.
defmt = [
    "esp-csi-rs/defmt",
    "esp-backtrace/defmt",
]
## Force the JTAG backend for logging. Pulls in `async-print` (non-blocking
## logging), which is mandatory here: the JTAG backend can block under sustained
## CSI load, and a blocked log write stalls the collection hot path and drops
## packets. This is the recommended setup for maximum collection throughput with
## `println`/serialized output. The explicit `async-print` here keeps this
## crate's own feature flag in sync (esp-csi-rs 0.8.0 no longer auto-enables
## `async-print` from `jtag-serial`).
## NOTE: do not combine with `defmt` (see the `defmt` feature above).
jtag-serial = ["esp-csi-rs/jtag-serial", "async-print"]
## Force the UART backend for logging (not recommended, much slower than JTAG backend).
## Do NOT combine with `async-print`: UART is already blocking and slow, so the
## async path adds overhead without benefit (and risks unexpected behavior).
uart = ["esp-csi-rs/uart"]

## Support for the ESP32
esp32 = [
    "esp-csi-rs/esp32"
]

## Support for the ESP32-C3
esp32c3 = [
    "esp-csi-rs/esp32c3"
]

## Support for the ESP32-C5
esp32c5 = [
    "esp-csi-rs/esp32c5"
]

## Support for the ESP32-C6
esp32c6 = [
    "esp-csi-rs/esp32c6"
]

## Support for the ESP32-S3 (AIoT)
esp32s3 = [
    "esp-csi-rs/esp32s3"
]

[dependencies]
esp-bootloader-esp-idf = "0.5.0"
esp-backtrace = { version = "0.19.0", features = [
    "panic-handler",
    # Call our `custom_halt` (which reboots) after printing a panic, instead
    # of parking the CPU forever — a halted board is unreachable over serial
    # and needs a physical button press, which defeats webserver automation.
    "custom-halt",
] }
esp-hal = { version = "~1.1", default-features = false, features = [
    "unstable",
] }
esp-rtos = { version = "0.3.0", optional = false, features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
] }
esp-println = { version = "0.17.0", default-features = false }
esp-alloc = { version = "0.10.0" }
embedded-io-async = "0.7.0"
# 0.7 version of embedded-io, exposed under an alias because the workspace
# also pulls in 0.6.1 for the `menu` crate (still on 0.6.x). Both crates need
# their own ErrorType/Write impls on `SerialInterface`.
embedded-io-07 = { package = "embedded-io", version = "0.7.1" }
esp-radio = { version = "0.18.0", default-features = false, optional = false, features = [
    "wifi",
    "sniffer",
    "esp-alloc",
    "unstable",
    "esp-now",
    "csi",
] }
heapless = { version = "0.9.3", default-features = false }
embassy-executor = { version = "0.10.0" }
embassy-time = { version = "0.5.1" }
static_cell = { version = "2.1.1" }
embassy-sync = { version = "0.8.0" }
embassy-futures = { version = "0.1.2" }
esp-csi-rs = { version = "0.9", default-features = false }
# `default-features = false` disables menu's per-keystroke echo. The CLI does
# its own echo in the byte-stream preprocessor (main.rs) so that quote chars
# and in-quote spaces render correctly — menu's echo would otherwise repaint
# the buffer with the 0x1F sentinel (invisible) where the user typed a space.
menu = { version = "0.6.1", default-features = false }
embedded-io = "0.6.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
incremental = true
debug = 2
opt-level = "s"
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
[profile.release.package."*"]
opt-level = 3